--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         </section>
         <section class="banner">
             <div class="banner-main">
-                <img src="img/Rectangle.png" width="1920" height="648" alt="camera">
+
+                <h2 class="header-text1">В Краснодаре и крае </h2>
+
             </div>
 
 
