--- a/index.html
+++ b/index.html
@@ -13,37 +13,43 @@
 
 <body>
     <header class="header">
-        <section class="header-wrapper">
-            <div class="header-menu">
-                <div class="header-logo"><img src="img/Logo.png"></div>
-                <ul class="header-menu-list">
-                    <li><a class="visited hover-red" href="#">Готовые решения</a></li>
-                    <li><a class="visited hover-red" href="#">Рассчитать стоимость</a></li>
-                    <li><a class="visited hover-red" href="#">Прайс</a></li>
-                    <li><a class="visited hover-red" href="#">Как мы работаем</a></li>
-                    <li><a class="visited hover-red" href="#">Контакты</a></li>
-                </ul>
-                <div class="header-contacts">
-                    <img src="img/Vector.png" width="17px" height="17px" alt="phone">
-
-                    <a class="header-phone" href="tel:+79180766686">8 (918) 076-66-86 </a>
-                    <a class="callback" href="#">Обратный звонок</a>
-                </div>
+        <div class="header-menu">
+            <div class="header-logo">
+                <a href="https://lakhtinmv.github.io/myvision-flex/"><img src="img/Logo.png"></a>
             </div>
-        </section>
-        <section class="banner">
-            <div class="banner-main">
+            <ul class="header-menu-list">
+                <li><a class="menu-text" href="#">Готовые решения</a></li>
+                <li><a class="menu-text" href="#">Рассчитать стоимость</a></li>
+                <li><a class="menu-text" href="#">Прайс</a></li>
+                <li><a class="menu-text" href="#">Как мы работаем</a></li>
+                <li><a class="menu-text" href="#">Контакты</a></li>
+            </ul>
+            <div class="header-contacts">
+                <img src="img/Vector.png" width="17px" height="17px" alt="phone">
 
-                <h2 class="header-text1">В Краснодаре и крае </h2>
-
+                <a class="header-phone" href="tel:+79129999393">8 (912) 999-93-93 </a>
+                <a class="callback" href="#">Обратный звонок</a>
             </div>
-
-
-        </section>
-
+        </div>
     </header>
     <main>
+        <section class="banner-block">
+            <div class="layout-positioner">
+                <div class="banner-text-flex">
+                    <p class="header-text1 header-text">В Краснодаре и крае </p>
+                    <p class="header-text2 header-text">Установка систем видеонаблюдения</p>
+                    <p class="header-text3 header-text">Мы подберем оптимальные решения для любых
+                        Ваших задач. С нами Вы всегда будете чувствовать себя в безопасности</p>
+                    <div class="banner-btn-block">
+                        <a class="banner-btn" href="#">Заказать расчет</a>
+                    </div>
 
+                </div>
+
+
+
+            </div>
+        </section>
     </main>
 
 </body>
