--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
                 <li><a class="menu-text" href="#">Контакты</a></li>
             </ul>
             <div class="header-contacts">
-                <img src="img/Vector.png" width="17px" height="17px" alt="phone">
 
-                <a class="header-phone" href="tel:+79129999393">8 (912) 999-93-93 </a>
+                <div class="icon-phone-block">
+
+                    <a class="header-phone" href="tel:+79129999393"><img src="img/Vector.png">8 (912) 999-93-93 </a>
+                </div>
                 <a class="callback" href="#">Обратный звонок</a>
             </div>
         </div>
