--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 
                 <div class="icon-phone-block">
 
-                    <a class="header-phone" href="tel:+79129999393"><img src="img/Vector.png">8 (912) 999-93-93 </a>
+                    <a class="header-phone" href="tel:+79129999393"><img class="icon" src="img/Vector.png"
+                            alt="Иконка телефона">8 (912)
+                        999-93-93 </a>
                 </div>
                 <a class="callback" href="#">Обратный звонок</a>
             </div>
