--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
                     <p class="header-text2 header-text">Установка систем видеонаблюдения</p>
                     <p class="header-text3 header-text">Мы подберем оптимальные решения для любых
                         Ваших задач. С нами Вы всегда будете чувствовать себя в безопасности</p>
-                    <div class="banner-btn-block">
-                        <a class="banner-btn" href="#">Заказать расчет</a>
-                    </div>
+                    <div class="banner-btn" type="button">Заказать расчет</div>
 
                 </div>
 
